feat: move to react (#13)
